--- a/en/debugger.html
+++ b/en/debugger.html
@@ -18,7 +18,7 @@
 .logo {  height:42px;  width: auto; }
 .none {  padding:0;  margin: 0; }
 /*.warning {color:#cce619;}*/
-.yell {color:#cce619;}
+.yell {color:#cce619;font-weight: bold;}
 .green {color: #007f00;font-weight: bold;}
 .treasure { color: rgba(0, 0, 0, 0.7); font-style: italic; font-weight: bold; background: none; }
 </style>
@@ -534,16 +534,16 @@ You can switch any version of PHP interpreter directly, it does not affect the s
 Above is the simplest approach to debug Javascript scripts or Node.js application with <a href="https://developers.google.com/web/tools/chrome-devtools/">Chrome Developer Tools</a>.<br><br>
 </p>
 
-
-<br><br>
-</div>
-
-</div>
 <p><br></p>
+<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
+<br><br>
+
+</div>
+</div>
 </section>
 </div>
 
-<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
+
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
