--- a/en/guard.html
+++ b/en/guard.html
@@ -20,9 +20,8 @@
 .fileicon { height:44px; width: auto; }
 .evil {color:#ff0000; }
 .dark {color:#333; }
-/*.warning {color:#cce619;}*/
-.greenbig {color: #007f00;font-size:1.2em;}
-.block { color:#000000;background:#9fa8b5; padding:10px 10px 10px 10px;border-radius: 4px; }
+.greenbig {color: #007f00;font-size:1.2em;font-weight: bold;}
+/*.block { color:#000000;background:#9fa8b5; padding:10px 10px 10px 10px;border-radius: 4px; }*/
 .tell { color:#000000; font-weight: bold; }
 .note { color:#f0f0f0; background:#007f00; border-radius: 4px; padding:2px 2px 2px 2px; }
 </style>
@@ -319,12 +318,15 @@ Thank you!<br>
   <li>Public key cryptography on Wikipedia, <a href="https://en.wikipedia.org/wiki/Public-key_cryptography">Public-key Cryptography</a>.</li>
 </ol>
 
-</div>
+
 <p><br></p>
+<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
+
+</div>
+</div>
 </section>
 </div>
 
-<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
