--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -17,15 +17,18 @@
 <style type="text/css">
 .none {  padding:0;  margin: 0; }
 /*.warning { color:#cce619;}*/
-.green, gr, lt{color: #007f00;}
+.green, gr, lt{color: #007f00; font-weight: bold;}
 .strike {text-decoration: line-through;}
 .treasure { color: rgba(0, 0, 0, 0.7); font-style: italic; font-weight: bold; background: none; }
 .button { width: auto; height: 36pt; vertical-align:middle;padding: 2px 2px 2px 2px;background: rgba(0, 0, 0, 0);}
 ul { list-style-type:none; list-style:none;}
 .tips { width:auto; height: 22px;}
+
+/*
 th { background:#333; color:white;text-align: center;}
 table { background:#f6f8fa; max-width: 64rem; border: 1px solid #9fa8b5; margin-bottom: 10px; text-align: left; border-spacing: 0; border-collapse: collapse;}
 table td { max-width:200px; text-align: center; padding:10px; border: 1px solid #9fa8b5; vertical-align:top;}
+*/
 </style>
 
 <title> LittleFox </title>
@@ -212,15 +215,18 @@ You can download the file here: <a href="../images/littlefox/RyoGothicPlusN-Extr
 
 <p class="green">My Video Now!</p>
 
+
+<!--p><audio autoplay loop preload="none"><source src="http://blog.sevenuc.com/music/chan/qEfRSe.mp3" type="audio/mpeg" /></audio></p-->
+
 <br><br>
-</div>
+<p><br></p>
 
 </div>
-<p><br></p>
+</div>
 </section>
 </div>
 
-<!--p><audio autoplay loop preload="none"><source src="http://blog.sevenuc.com/music/chan/qEfRSe.mp3" type="audio/mpeg" /></audio></p-->
+
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
