--- a/en/log.html
+++ b/en/log.html
@@ -114,6 +114,10 @@ such as: isutf8(), strlen(), substr(), strchr(), charat(), strtok(), split(), jo
 </p>
 
 <p><br></p>
+
+
+</div>
+</div>
 </section>
 </div>
 
