--- a/en/powerreader.html
+++ b/en/powerreader.html
@@ -15,14 +15,6 @@
 <meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <!--script src="../js/twitter.js"></script-->
-<style type="text/css">
-/*.hilight {color:#cce619;}*/
-.smallsection { max-width: 480px; }
-/*.warning {color:#cce619;}*/
-.smallicon { height:32px; width:auto; vertical-align:middle;}
-.note { color:#ffffff; background:#FF4081; border-radius: 4px; padding:2px 2px 2px 2px; }
-.block {  color:#000000;background:#9fa8b5; padding:10px 10px 10px 10px;border-radius: 4px; }
-</style>
 <title>iPowerReader - remote share your documents on iOS device anywhere.</title>
 </head>
 <body>
@@ -57,7 +49,7 @@
 <p class="warning">It's convenient but not necessary to store everything on cloud, there is still existing many reasons to store Office documents, photo, video and other files on private disk, computer or other storage devices to prevent the data be illegally accessed, used or analysed.</p>
 
 <h2>Why</h2>
-<p class="block">Transferring files between iPhone and MacBook always makes me very angry! Transferring files between Mac and iOS devices is always difficult and pain! You can't feel free to transfer files as convenient as moving files in Finder! So, this app developed to help you manage files in your iOS devices just like on your MacBook!</p>
+<p>Transferring files between iPhone and MacBook always makes me very angry! Transferring files between Mac and iOS devices is always difficult and pain! You can't feel free to transfer files as convenient as moving files in Finder! So, this app developed to help you manage files in your iOS devices just like on your MacBook!</p>
 
 <h2>Fast share files between your Mac, Windows PC or Linux, Android and iOS devices</h2>
 <p><lt>iPowerReader is a Finder-like file manager on iOS device, you can transfer, delete, rename any file or folder one by one just like in Finder that completely different with translating files with iTunes that required to sync whole folder, it's more intuitive, simple, fast and feel free.</lt></p>
