--- a/en/resources.html
+++ b/en/resources.html
@@ -34,7 +34,7 @@
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 <div style="max-width:470px;">
-<p style="width:470px;height:auto;"><a href="http://blog.sevenuc.com/index.html" target="_blank"><img src="../images/cantonese/Samuel_Hui.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a>  <a href="http://blog.sevenuc.com/index.html" target="_blank"><img src="../images/cantonese/Danny_Chan.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a> <br></p>
+<p style="width:470px;height:auto;"><a href="javascript:void();" target="_blank"><img src="../images/cantonese/Samuel_Hui.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a>  <a href="javascript:void();" target="_blank"><img src="../images/cantonese/Danny_Chan.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a> <br></p>
 
 <!--♪♪ 線上聽歌 ♬♪<br>-->
 <h2>♪ Ripples of Yuet music </h2>
@@ -44,7 +44,7 @@ Mr. 許冠傑/Samuel Hui Koon-Kit,<br>
 Mr. 陳百強/Danny Chan Pak-keung.<br>
 </p>
 <p><div id="player1" class="aplayer" style="display:none;"></div></p>
-<p><a href="http://blog.sevenuc.com/index.html" target="_blank" stlye="float:left; margin-right:1em;"><svg width="20" height="20" viewBox="0 0 20 20" style="float:left; fill:#f85625; color:#ffffff; position: relative; border: 0; margin-left:0;right: 0;">
+<p><a href="javascript:void();" target="_blank" stlye="float:left; margin-right:1em;"><svg width="20" height="20" viewBox="0 0 20 20" style="float:left; fill:#f85625; color:#ffffff; position: relative; border: 0; margin-left:0;right: 0;">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M16,1H4C3.447,1,3,1.447,3,2v16c0,0.552,0.447,1,1,1h12c0.553,0,1-0.448,1-1V2
 	C17,1.448,16.553,1,16,1z M12.795,11.519c-0.185,0.382-0.373,0.402-0.291,0C12.715,10.48,12.572,8.248,11,8v4.75
 	c0,0.973-0.448,1.82-1.639,2.203c-1.156,0.369-2.449-0.016-2.752-0.846c-0.303-0.83,0.377-1.84,1.518-2.256
@@ -70,25 +70,26 @@ Mr. 陳百強/Danny Chan Pak-keung.<br>
 1, The Yuet - Chinese text to <a href = "http://www.sevenuc.com/en/tts.html">speech synthesis engine</a>.<br>
 2, Translation between Cantonese and Mandarin, <a href="http://www.sevenuc.com/en/lecher.html">some examples</a>.<br>
 3, Fun with <a href="http://www.sevenuc.com/en/proverbs.html">Cantonese idioms and proverbs</a>.<br>
-<a href="http://blog.sevenuc.com/music/index.html"><img src="../images/cantonese/Wan_Kwong.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a>&nbsp;<a href="http://blog.sevenuc.com/music/index.html"><img src="../images/opera.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a> <br>
+<a href="javascript:void();"><img src="../images/cantonese/Wan_Kwong.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a>&nbsp;<a href="javascript:void();"><img src="../images/opera.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a> <br>
 4, *  You should listen the operas and the songs and study the lyrics from Mr. 尹光/Wan Kwong if you want to learn the true Cantonese words and pure pronunciation of Cantonese. <br>
-More fun with music and lyrics from <a href="http://blog.sevenuc.com/music/index.html" target="_blank">Mr. 尹光/Wan Kwong online</a>.<br><br>
+More fun with music and lyrics from <a href="javascript:void();" target="_blank">Mr. 尹光/Wan Kwong online</a>.<br><br>
 
 Should you for some reason need any of the materials, book or audio, don’t hesitate to drop us an email.</p>
 <p><br></p>
 
-</div>
-
-
 <p><br></p>
-</section>
-</div>
-
 <!--p><audio autoplay loop preload="none"><source src="http://blog.sevenuc.com/music/chan/HytIsX.mp3" type="audio/mpeg" /></audio></p-->
 <p><audio autoplay loop preload="none" id="myaudio">
 <source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg" />
 <source src="http://www.sevenuc.com/audio/ripples.ogg" type="audio/ogg">
 </audio></p>
+
+
+</div>
+</div>
+</section>
+</div>
+
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
