--- a/en/tts.html
+++ b/en/tts.html
@@ -84,8 +84,9 @@ Yuet can have bindings for many modern programming languages, such as JavaScript
 
 <div class="block"><pre><code>
 $./uctts -c -v "我們認為最好以投資的方式來進行技術轉移。"
-我們(ngo5 mun4)認為(jing6 wai4)最好(zeoi3 hou3)以(ji5)投資(tau4 zi1)的(dik1)
-方式(fong1 sik1)來(loi4)進行(zeon3 hang6)技術(gei6 seot6)轉移(zyun2 ji4)。
+我們(ngo5 mun4)認為(jing6 wai4)最好(zeoi3 hou3)以(ji5)
+投資(tau4 zi1)的(dik1)方式(fong1 sik1)來(loi4)進行(zeon3 hang6)
+技術(gei6 seot6)轉移(zyun2 ji4)。
 
 $./uctts
            __  __ 
@@ -99,7 +100,9 @@ http://www.sevenuc.com
 
 Usage: uctts -[c|m] -[f|s|r|v] "text"
 -f format input text, translate Mandarin to Cantonese.
--s word segmentation, -r romanisation generation, -v voice synthesise.
+-s word segmentation, 
+-r romanisation generation, 
+-v voice synthesise.
 "text" is the content to process.
 e.g: uctts -c -r "text".
 </code></pre></div>
@@ -140,14 +143,16 @@ The engine will be finally open source, but not now, please kindly donate me to 
 </p></div>
 
 <p><br><br><br><br></p>
-
-</section>
-</div>
-
 <p><audio autoplay loop preload="none" id="myaudio">
 <source src="../audio/ripples.mp3" type="audio/mpeg" />
 <source src="../audio/ripples.ogg" type="audio/ogg">
 </audio></p>
+
+
+</div>
+</div>
+</section>
+</div>
 
 
 <!-- FOOTER  -->
