--- a/en/Taihaa.html
+++ b/en/Taihaa.html
@@ -102,7 +102,7 @@
 
 
 <h2>商務合作-智慧財產權轉讓</h2>
-<p><img src="../images/Taihaa/fate-machine.png" /><br>
+<p><img src="../images/Taihaa/fate-machine.png" class="screenshots"/><br>
 <span class="machine">命理分析機模型</span><br>
 本解決方案特意為嵌入式系統而設計，產品可以設計為台式設備或便捷式手持設備，引擎完全採用ANSI C開發，體積小巧，包含命術分析引擎，PDF文檔列印引擎，可以非常方便而快速地開發出消費娛樂設備，如上圖所示。本系統商業前景廣闊，經濟效益巨大，設備適合安置於各種娛樂場所，消費者只需用手機掃描CR碼該機即可列印出精美的「命術分析報告」。本引擎將以源代碼方式進行一次性產權轉讓(出售)，因此購買者可以擁有最大的權利，如有意購買，請進一步聯繫了解詳情。
 </p>
@@ -119,15 +119,15 @@
 <h2>引用</h2>
 <p><a href="Tungsyu.html">Tungsyu「通書」</a>, 農曆資訊查詢工具。 The Calendar of Yangtze River.</p>
 
-
-</div>
-
-</div>
 <p><br></p>
+<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
+
+</div>
+</div>
 </section>
 </div>
 
-<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
+
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
