--- a/en/lyricsmaker.html
+++ b/en/lyricsmaker.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
 .none {  padding:0;  margin: 0; }
-.greenbig {color: #007f00;font-size:1.2em;}
+.greenbig {color: #007f00;font-size:1.2em; font-weight: bold;}
 .strike {text-decoration: line-through;}
 .treasure { color: rgba(255, 0, 255, 0.5); font-size: 11px;font-style: italic; font-weight: bold; background: none; }
 .button { width: auto; height: 36pt; vertical-align:middle;background: rgba(0, 0, 0, 0);}
@@ -149,15 +149,15 @@ Mr. 陳百強/Danny Chan Pak-keung.<br>
 	C8.764,11.619,9.502,11.559,10,11.75V5h1C11,7.355,15.065,6.839,12.795,11.519z"/></svg> listen the music online with your mobile phone.</a> 
 <br></p>
 
-
-</div>
-
-</div>
 <p><br></p>
+<p><audio autoplay loop preload="none"><source src="http://blog.sevenuc.com/music/chan/qEfRSe.mp3" type="audio/mpeg" /></audio></p>
+
+</div>
+</div>
 </section>
 </div>
 
-<p><audio autoplay loop preload="none"><source src="http://blog.sevenuc.com/music/chan/qEfRSe.mp3" type="audio/mpeg" /></audio></p>
+
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
