--- a/en/proverbs.html
+++ b/en/proverbs.html
@@ -702,14 +702,16 @@ Hong Kong, Macau, Macao, Canton, Cantonese, Guangzhou, Chinese, China, dictionar
 <p>Fun with more proverbs in the dictionary app on App Store. <br><br>
 <a class="appstore_download_link" href="https://itunes.apple.com/us/app/yue-cantonese-hong-kong-slang/id898134235?mt=8"></a></p>
 <p><br><br><br></p>
+<p><br></p>
+<p><br></p>
+
+<p><audio autoplay loop preload="auto"><source src="http://www.sevenuc.com/audio/boss.mp3" type="audio/mpeg" /></audio></p>
 
 </div>
-<p><br></p>
-<p><br></p>
+</div>
 </section>
 </div>
 
-<p><audio autoplay loop preload="auto"><source src="http://www.sevenuc.com/audio/boss.mp3" type="audio/mpeg" /></audio></p>
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
