--- a/en/reviewer.html
+++ b/en/reviewer.html
@@ -15,10 +15,6 @@
 <meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <!--script src="../js/twitter.js"></script-->
-<style type="text/css">
-i, em { font-style: italic; }
-.block { font-style: italic;color:#000000;background:#9fa8b5; padding:10px 10px 10px 10px;border-radius: 4px; }
-</style>
 <title> Chinese Chess Reviewer </title>
 </head>
 <body>
@@ -108,9 +104,9 @@ Chinese Chess contains the ancient oriental profound philosophy and wisdom, that
 <p>There is an ancient DOS game, Chinese Chess Master III ( 將族 III), the AI algorithm of the game is amazing powerful! Before AlphaGo from google versus Lee Sedol (one of the top Go game players) at March 2016, many years ago, this excellent DOS game made so many professional human chess players lost. How powerful the chess players in this game are unknown! AlphaGo run with distributed 1,920 CPUs and 280 GPU and more, but this DOS game is only 926KB running on one CPU with 64KB memory! Might this small game requires you to challenge it in your whole life! Maybe the weakest one, Mr. pig can easily beat you! Here it is!</p>
 
 <div class="screenshots">
-<p><a href="../images/reviewer/cch1.png" target="_blank"><img class="screenshots" src="../images/reviewer/cch1.png"></a><p>
-<p><a href="../images/reviewer/cch2.png" target="_blank"><img class="screenshots" src="../images/reviewer/cch2.png"></a><p>
-<p><a href="../images/reviewer/cch3.png" target="_blank"><img class="screenshots" src="../images/reviewer/cch3.png"></a><p>
+<p><a href="../images/reviewer/cch1.png" target="_blank"><img class="screenshots" src="../images/reviewer/cch1.png" class="screenshots"></a><p>
+<p><a href="../images/reviewer/cch2.png" target="_blank"><img class="screenshots" src="../images/reviewer/cch2.png" class="screenshots"></a><p>
+<p><a href="../images/reviewer/cch3.png" target="_blank"><img class="screenshots" src="../images/reviewer/cch3.png" class="screenshots"></a><p>
 </dir>
 
 <p>You can challenge this dead powerful game on Android phone, iPhone, iPad, or on Macintosh, Windows and Linux, anywhere you required to play on, I'm pleasured to packing it for you on any platform. Further more, I've collected tons of wonderful DOS game/arcade game so many years, if you're interesting in play them again, please email your request.</p>
