--- a/en/service.html
+++ b/en/service.html
@@ -36,10 +36,14 @@
 <p><br><br><br><br><br></p>
 
 <!--div style="height:100vh; width:vw;"></div-->
+<p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
+
+
+</div>
+</div>
 </section>
 </div>
 
-<p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
