--- a/en/ai.html
+++ b/en/ai.html
@@ -95,11 +95,16 @@ Options:
 	</ul>
 </p>
 <p><br></p>
+<p><audio autoplay loop preload="none"><source src="http://blog.sevenuc.com/music/chan/qEfRSe.mp3" type="audio/mpeg" /></audio></p>
 
+
+
+</div>
+</div>
 </section>
 </div>
 
-<p><audio autoplay loop preload="none"><source src="http://blog.sevenuc.com/music/chan/qEfRSe.mp3" type="audio/mpeg" /></audio></p>
+
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
