--- a/en/about.html
+++ b/en/about.html
@@ -43,16 +43,17 @@ Rebuild foundational technologies of computer system from scratch!</p>
 <a href="../images/ParaOS.png" target="_blank"><img src="../images/ParaOS.png" class="screenshots"><br>
 </div>
 
-
+<p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
 
 
 <!--div style="height:100vh; width:vw;"></div-->
 <p><br><br><br><br><br></p>
 
+</div>
+</div>
 </section>
 </div>
 
-<p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
