--- a/en/apps.html
+++ b/en/apps.html
@@ -56,7 +56,7 @@
 </p>
 
 <p class="section"><a href="beak.html"><img src="../images/beak/beak_logo.png" class="macapp" /></a>
-<a href="beak.html"><b>Beak</b></a> is an ultra small C and C++ obfuscator that used to encrypt source code of your software. 
+<a href="beak.html"><b>Beak</b></a> is a small utility used to reduce binary size of your software for embedded systems, and also an ultra small C and C++ obfuscator that used to encrypt source code of your software. 
 </p>
 
 <p class="section"><a href="lyricsmaker.html"><img src="../images/lyricsmaker/logo.png" class="macapp" /></a>
