--- a/en/reviewer.html
+++ b/en/reviewer.html
@@ -79,8 +79,8 @@ CCReviewer is a carefully designed chess review and learning tool on mobile devi
 
 <h2>References</h2>
 <p>
-1, <a href = "../download/Chinese Chess.pdf"> <img src="../images/download.png" style="width:auto;height:26px;">&nbsp;&nbsp;Chinese Chess.pdf </a><br>
-2, <a href="https://chengdu.github.io/Chinese-Chess-for-Beginners/index.html"> <img src="../images/github-logo.png" style="width:auto;height:26px;"> Chinese Chess for Beginners.</a> <br></p>
+1, <a href = "../download/Chinese Chess.pdf" target="_blank"> <img src="../images/download.png" style="width:auto;height:26px;">&nbsp;&nbsp;Chinese Chess.pdf </a><br>
+2, <a href="https://chengdu.github.io/Chinese-Chess-for-Beginners/index.html" target="_blank"> <img src="../images/github-logo.png" style="width:auto;height:26px;"> Chinese Chess for Beginners.</a> <br></p>
 
 <p>
 Chinese Chess contains the ancient oriental profound philosophy and wisdom, that results it very IQ challenge and very attractive unique style maybe than any game you've been played, you can challenge it in your whole life, and it's suitable for both children and parents. For children, play more will make them smarter more.<br></p>
